<resources>
    <string name="app_name">testt</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Catogory</string>
    <string name="menu_slideshow">Order</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="_0123456789">0123456789</string>
    <string name="_123456">123456</string>
    <string name="food">food</string>
    <string name="hamburber">Hamburber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foods">Foods</string>
    <string name="buy">Buy</string>
    <string name="chicken">Chicken</string>
    <string name="_10_00">10.00</string>
    <string name="usd">$</string>
    <string name="button_sub">button sub</string>
    <string name="button">Button</string>
    <string name="button_add">button add</string>
    <string name="tuan_anh_la_so_1">tuan anh la so 1</string>
</resources>