<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.nta.testt.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_menu_to_foodsFragment"
            app:destination="@id/foodsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.nta.testt.ui.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.nta.testt.ui.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
    </fragment>
    <fragment
        android:id="@+id/foodsFragment"
        android:name="com.nta.testt.ui.FoodsFragment"
        android:label="Categories"
        tools:layout="@layout/fragment_foods" >
        <action
            android:id="@+id/action_foodsFragment_to_detailsFoods"
            app:destination="@id/detailsFoods" />
    </fragment>
    <fragment
        android:id="@+id/detailsFoods"
        android:name="com.nta.testt.ui.DetailsFoods"
        android:label="fragment_details_foods"
        tools:layout="@layout/fragment_details_foods" />
</navigation>